Fixed item layout issues

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -5,7 +5,10 @@
 .itemWrapper {
     position: relative;
     display: inline-block;
-    height: 32px;
+}
+
+.itemImage {
+    width: 100%;
 }
 
 .map-wrapper {
